fix: payload 필드명을 AI input 규격에 정렬(start/end·address·transports·durationText)
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>